// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 1`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "enableManualConvoStart": false,
    "flashNotificationOnNewMessage": false,
    "menuOptions": Object {
      "customItems": Array [],
      "offset": undefined,
    },
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "uninitialized",
  "inputtingEmail": false,
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Object {},
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 2`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatLauncherHidden": true,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "enableManualConvoStart": false,
    "flashNotificationOnNewMessage": false,
    "menuOptions": Object {
      "customItems": Array [],
      "offset": undefined,
    },
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "uninitialized",
  "inputtingEmail": false,
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Object {},
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers NEW_WEBCHAT_SESSION updates state with initial state merged with current visibility state and "initialized" set to "LOADING" 1`] = `
Object {
  "agentTyping": false,
  "agentsAvailable": true,
  "chatContainerHidden": false,
  "chatLauncherHidden": false,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "enableManualConvoStart": false,
    "flashNotificationOnNewMessage": false,
    "menuOptions": Object {
      "customItems": Array [],
      "offset": undefined,
    },
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "loading",
  "inputtingEmail": false,
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Object {},
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;
